# Linux-image-from-Scratch

./: README.md
1-Crosstool-NG/: README.md
2-U-Boot/: README.md
2-U-Boot/vxpress configs/: launch.sh  qemu-ifup.sh  v7.config
3-Kernel/: README.md
3-Kernel/New-DeviceDriver/: README.md
4-BusyBox/: README.md
4-BusyBox/NFS/: README.md
4-BusyBox/initApp/: CMakeLists.txt  TestDeamon  app.c
5-Initprocess/: README.md
